# tree-menu

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
provision/: docker.py
server/: conftest.py  manage.py  pyproject.toml  setup.cfg
server/apps/tree/: admin.py  apps.py  custom_tags.py  factories.py  models.py  urls.py  views.py
server/apps/tree/migrations/: 0001_initial.py
server/apps/tree/templatetags/: draw_item.py  draw_menu.py
server/config/: urls.py
server/config/settings/: installed_apps.py  settings.py
server/scripts/: fill_sample_data.py
server/static/: script.js  style.css
server/templates/: base.html
server/templates/tree/: detail_menu.html  list.html  list_menu.html  menu.html  menu_item.html
