[tool.poetry]
name = "tree_menu"
version = "0.1.0"
description = "My new django project"
authors = ["ZZaRRyaDD <example@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
invoke = "1.7.3"
rich = "12.6.0"
ipdb = "0.13.9"
Werkzeug = "2.2.2"
watchfiles = "0.16.1"
Pillow = "9.3.0"
django = "3.2.16"
redis = "4.3.5"
django-model-utils = "4.3.1"
psycopg2-binary = "2.9.5"
django-extensions = "3.2.1"
dj-database-url = "1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "4.0.1"
flake8-isort = "4.2.0"
django-debug-toolbar = "3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
